estructura de los modales

--- a/index.HTML
+++ b/index.HTML
@@ -8,6 +8,90 @@
     <link rel="stylesheet" href="css/estilosCurso.css" href="">
   </head>
   <body>
+  <header>
+    <div class="container">
+      
+    </div>
+  </header>
+    <div class="container">
+      <section class="main row">
+      <h1>¿En escala del racoon cómo te sientes hoy?<br><small> Selecciona tu estado de ánimo</small></h1>
+      <hr>
+      <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>Num</th>
+        <th>Me siento..</th>
+        <th>Acciones</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>#1</td>
+        <td>Triste</td>
+        <td>
+          <button class="btn btn-info btn-primary" data-toggle="modal" data-target="#modalTriste">Detalles</button>
+          <button class="btn btn-info btn-primary">Aceptar</button>
+        </td>
+      </tr>
+      <tr>
+        <td>#2</td>
+        <td>Audaz</td>
+        <td>
+          <button class="btn btn-info btn-primary" data-toggle="modal" data-target="#modalAudaz">Detalles</button>
+          <button class="btn btn-info btn-primary">Aceptar</button>
+        </td>
+      </tr>
+      <tr>
+        <td>#3</td>
+        <td>Alegre</td>
+        <td>
+          <button class="btn btn-info btn-primary" data-toggle="modal" data-target="#modalAlegre">Detalles</button>
+          <button class="btn btn-info btn-primary">Aceptar</button>
+        </td>
+      </tr>
+      <tr>
+        <td>#4</td>
+        <td>Dormilón</td>
+        <td>
+          <button class="btn btn-info btn-primary" data-toggle="modal" data-target="#modalDormilón">Detalles</button>
+          <button class="btn btn-info btn-primary">Aceptar</button>
+        </td>
+      </tr>
+      <tr>
+        <td>#5</td>
+        <td>Enojado</td>
+        <td>
+          <button class="btn btn-info btn-primary" data-toggle="modal" data-target="#modalEnojado">Detalles</button>
+          <button class="btn btn-info btn-primary">Aceptar</button>
+        </td>
+      </tr>
+      <tr>
+        <td>#6</td>
+        <td>Perspicaz</td>
+        <td>
+          <button class="btn btn-info btn-primary" data-toggle="modal" data-target="#modalPerspicaz">Detalles</button>
+          <button class="btn btn-info btn-primary">Aceptar</button>
+        </td>
+      </tr>
+      <tr>
+        <td>#7</td>
+        <td>Nervioso</td>
+        <td>
+          <button class="btn btn-info btn-primary" data-toggle="modal" data-target="#modalNervioso">Detalles</button>
+          <button class="btn btn-info btn-primary">Aceptar</button>
+        </td>
+      </tr>
+    </tbody>
+    </table>
+    <hr>
+    </section>
+    </div>
+    <footer>
+      <div class="container">
+        
+      </div>
+    </footer>
   	<script src="js/jquery-3.4.1.min.js"></script>
   	<script src="js/bootstrap.min.js"></script>
   </body>
