--- a/tarjetas.HTML
+++ b/tarjetas.HTML
@@ -5,35 +5,38 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/estilos.css">
   <script src="js/jquery-3.4.1.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
 </head>
 <body>
 <div class="container">
-  <h2>Modal Example</h2>
-  <!-- Trigger the modal with a button -->
+  <!-- <h2>Modal Example</h2>
+  Trigger the modal with a button 
   <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#modalTriste">Open Modal</button>
+  <button typo="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#modalAudaz">Abrir Modal</button>
+-->
 
-  <div class="modal fade" id="modalTriste" role="dialog">
-    <div class="modal-dialog">
+  <div class="modal fade" id="modalTriste" role="dialog"><!--transición-->
+    <div class="modal-dialog modalCenter">
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Me siento Triste</h4>
+          <h4 class="modal-title">Hoy me siento...</h4>
         </div>
         <div class="modal-body">
           <!--Sección de Imágen-->
           <p>TEXTO JSON.</p>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
   </div>
 
     <div class="modal fade" id="modalAudaz" role="dialog">
-    <div class="modal-dialog">
+    <div class="modal-dialog modalCenter">
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -44,14 +47,14 @@
           <p>TEXTO JSON.</p>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
   </div>
 
     <div class="modal fade" id="modalAlegre" role="dialog">
-    <div class="modal-dialog">
+    <div class="modal-dialog modalCenter">
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -62,14 +65,14 @@
           <p>TEXTO JSON.</p>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
   </div>
 
     <div class="modal fade" id="modalDormilon" role="dialog">
-    <div class="modal-dialog">
+    <div class="modal-dialog modalCenter">
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -80,14 +83,14 @@
           <p>TEXTO JSON.</p>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
   </div>
 
     <div class="modal fade" id="modalEnojado" role="dialog">
-    <div class="modal-dialog">
+    <div class="modal-dialog modalCenter">
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -98,14 +101,14 @@
           <p>TEXTO JSON.</p>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
   </div>
 
     <div class="modal fade" id="modalPerspicaz" role="dialog">
-    <div class="modal-dialog">
+    <div class="modal-dialog modalCenter">
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -116,14 +119,14 @@
           <p>TEXTO JSON.</p>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
   </div>
 
     <div class="modal fade" id="modalNervioso" role="dialog">
-    <div class="modal-dialog">
+    <div class="modal-dialog modalCenter">
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -134,7 +137,7 @@
           <p>TEXTO JSON.</p>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
