--- a/index.HTML
+++ b/index.HTML
@@ -11,7 +11,7 @@
   <header>
     <div class="container">
       <div class="page-header">
-        <h1>Example Page Header</h1>      
+        <h1>Header</h1>      
       </div>
     </div>
   </header>
@@ -19,8 +19,8 @@
       <section class="main row">
       <h1>¿En escala del racoon cómo te sientes hoy?<br><small> Selecciona tu estado de ánimo</small></h1>
       <hr>
-      <div class="table-responsive">
-      <table class="table table-striped">
+      <div class="table-responsive ">
+      <table class="table table-striped table-hover">
     <thead>
       <tr>
         <th>Num</th>
@@ -93,7 +93,7 @@
         <div class="row">
     	<div id="exitoso" class="alert alert-success">
     		<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-  			<strong>Selección Correcta!</strong> Tu estado ha sido guardado satisfactoriamente.
+  			<strong>Selección Correcta!</strong> Tu estado de ánimo ha sido guardado satisfactoriamente.
 		</div>
 	</div>
     </div>
